<resources>
    <string name="app_name">Tv Maze App</string>
    <string name="show_name">Show name</string>
    <string name="default_show_genres">Comedy</string>
    <string name="error_server">Unfortunately the search has problems.</string>
    <string name="error_network">Problem in connecting to the data network.</string>
    <string name="error_unknown">Unfortunately the search has unknown issues.</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search tv show category</string>
    <string name="genres_label">Genres</string>
    <string name="summary_label">Summary</string>
    <string name="premiered_label">Premiered</string>
    <string name="default_show_name">Seth MacFarlane\'s Cavalcade of Cartoon Comedy</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="tv_show_name">Tv show name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
